--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100vh;
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: var(--gray-200);
   justify-content: space-between;
 }
 .content-section {
