--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -1,9 +1,6 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 10px 20px;
-  background-color: #f5f5f5;
+  background-color: var(--gray-200);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
@@ -20,14 +17,4 @@
 .logo-text {
   font-size: 1.5rem;
   font-weight: 600;
-}
-.search-section {
-  display: flex;
-  align-items: center;
-}
-.search-input {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin-right: 10px;
 }
