--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,10 +3,51 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media (max-width: 768px) {
+  .page-header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+}
+
 .page-title {
   font-size: 2rem;
   font-weight: 700;
   color: var(--primary-color);
+}
+
+.refetch-button {
+  padding: 5px 10px;
+  border: 1px solid var(--gray-300);
+  border-radius: 5px;
+  background-color: var(--white);
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.error {
+  color: var(--red-500);
+  font-size: 1.5rem;
+  margin-top: 20px;
+}
+
+.message {
+  font-size: 1.5rem;
+  color: var(--gray-500);
+  margin-top: 20px;
+}
+
+.page-header__right {
+  display: flex;
+  align-items: space-between;
+}
+
+.search-section {
+  display: flex;
+  align-items: center;
 }
 
 .search-input {
