--- a/src/components/Pathway.css
+++ b/src/components/Pathway.css
@@ -6,6 +6,23 @@
   flex-direction: column;
   gap: 8px;
 }
+.pathway-card__image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+.pathway-card__image-wrapper span {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 0.8rem;
+}
 .pathway-card__image {
   width: 100%;
   border-top-left-radius: 8px;
