--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -8,12 +8,14 @@
 .logo-section {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
+
 .logo-img {
   width: 50px;
   height: 50px;
-  margin-right: 10px;
 }
+
 .logo-text {
   font-size: 1.5rem;
   font-weight: 600;
