--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(245, 245, 248);
+  background-color: var(--gray-200);
 }
 
 .btn-primary {
