--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -20,8 +20,12 @@
   border-color: var(--primary-color);
 }
 
-.pagination button:hover {
-  background-color: var(--gray-300);
+.pagination button:not(:disabled):hover {
+  background-color: var(--gray-200);
   color: var(--primary-color);
   border-color: var(--primary-color);
+}
+.pagination button:disabled {
+  border-color: var(--gray-500);
+  color: var(--gray-500);
 }
